

syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.type.proto";
option java_outer_classname = "TypeProto";

package type;
import "google/protobuf/wrappers.proto";

service Type {
  
  rpc GetTypeById(RequestId) returns (ReplyType) {}
  rpc GetTypeWrapperById(RequestId) returns (ReplyTypeWrapper) {}
}

message RequestId {
  int64 id = 1;
}

message ReplyType {
     int64 id = 1;
	 string type_varchar = 2;
	 string type_char = 3;
     string type_text = 4;
     int32 type_integer = 5;
     int32 type_tinyint = 6;
     int32 type_smallint = 7;
     int32 type_mediumint = 8;
     int64 type_bigint = 9;
     float type_float = 10;
     double type_double = 11;
     string type_decimal = 12;
     string type_date = 13;
     string type_datetime = 14;
     string type_time = 15;
     string type_timestamp = 16;
     bytes type_blob = 17;
}

message ReplyTypeWrapper {
     google.protobuf.Int64Value id = 1;
	 google.protobuf.StringValue type_varchar = 2;
	 google.protobuf.StringValue type_char = 3;
     google.protobuf.StringValue type_text = 4;
     google.protobuf.Int32Value type_integer = 5;
     google.protobuf.Int32Value type_tinyint = 6;
     google.protobuf.Int32Value type_smallint = 7;
     google.protobuf.Int32Value type_mediumint = 8;
     google.protobuf.Int64Value type_bigint = 9;
     google.protobuf.FloatValue type_float = 10;
     google.protobuf.DoubleValue type_double = 11;
     google.protobuf.StringValue type_decimal = 12;
     google.protobuf.StringValue type_date = 13;
     google.protobuf.StringValue type_datetime = 14;
     google.protobuf.StringValue type_time = 15;
     google.protobuf.StringValue type_timestamp = 16;
     google.protobuf.BytesValue type_blob = 17;
}